--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -128,6 +128,8 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
+                            <li role="none"><button role="menuitem" class="theme" id="rs-light">{{ theme_option "Roundsync Light" }}</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rs-dark">{{ theme_option "Roundsync Dark" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="light">{{ theme_option "Light" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">{{ theme_option "Rust" }}</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">{{ theme_option "Coal" }}</button></li>
